--- a/courses.html
+++ b/courses.html
@@ -15,7 +15,7 @@
             box-sizing: border-box;
         }
 
-        /* --- Animation Definition (Keep for course cards/intro) --- */
+        /* --- Animation Definition --- */
         @keyframes fadeInUp {
             from {
                 opacity: 0;
@@ -32,49 +32,48 @@
             font-family: 'Nunito', sans-serif;
             color: #f0f0f0;
             overflow-x: hidden;
-            /* Keep padding-top because nav is fixed */
-            padding-top: 60px;
+            padding-top: 60px; /* Account for fixed navbar */
             transition: background-color 0.3s ease;
         }
 
-        /* Navbar - Styles adjusted to match reference */
+        /* Added rule to prevent body scroll when mobile menu is active */
+        body.no-scroll {
+            overflow: hidden;
+        }
+
+        /* Navbar */
         nav {
             background-color: white;
-            /* Reference uses padding: 10px 0; height: auto; */
-            /* Keep explicit height for consistent padding-top offset */
             height: 60px;
-            padding: 0 20px; /* Keep some padding for container */
+            padding: 0 20px;
             width: 100%;
             position: fixed;
             top: 0;
             left: 0;
-            right: 0; /* Added based on reference */
+            right: 0;
             z-index: 1000;
             display: flex;
-            justify-content: center; /* Center #nav-links directly */
+            justify-content: center;
             align-items: center;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
-            transition: padding 0.3s ease; /* From reference */
+            transition: padding 0.3s ease;
         }
 
-        /* No specific .nav-container centering needed now */
-        /* Keep .nav-container if needed for max-width or other layouts later */
          .nav-container {
              display: flex;
-             justify-content: space-between; /* Use space-between for logo/links vs hamburger */
+             /* Justify depends on screen size (see media queries) */
              align-items: center;
              width: 100%;
-             max-width: 1200px; /* Optional: constrain width */
+             max-width: 1200px;
          }
-
 
         #nav-links {
             list-style: none;
-            display: flex; /* Display handled by media queries */
+            /* Display handled by media queries */
             gap: 20px;
             margin: 0;
             padding: 0;
-            justify-content: center; /* Ensure links center themselves */
+            justify-content: center;
         }
 
         #nav-links li {
@@ -96,25 +95,23 @@
             transform: scale(1.1);
         }
 
-        /* Hamburger Menu - Styles from reference */
+        /* Hamburger Menu */
         .hamburger-menu {
             display: none; /* Display handled by media query */
             flex-direction: column;
             cursor: pointer;
-            /* Added padding for easier clicking */
             padding: 10px;
-            z-index: 1002; /* Ensure clickable */
+            z-index: 1002;
             position: relative;
-            transition: transform 0.3s ease; /* From reference */
+            transition: transform 0.3s ease;
         }
 
         .hamburger-menu div {
             width: 25px;
             height: 3px;
-             /* margin: 5px; /* From reference */
-             margin: 4px 0; /* Keep slightly tighter spacing */
+             margin: 4px 0;
             background-color: #000;
-            transition: transform 0.3s ease; /* From reference */
+            transition: transform 0.3s ease;
         }
 
         /* Mobile Menu - Styles from reference */
@@ -122,20 +119,19 @@
             display: none; /* Hidden by default, enabled in mobile media query */
             position: absolute; /* From reference */
             top: -100%; /* Start off-screen */
-            left: 0; /* Align to left */
-            right: 0; /* Align to right (effectively width 100%) */
+            left: 0;
+            right: 0;
             background-color: rgba(255, 255, 255, 0.9); /* Reference background */
-            width: 100%; /* Ensure full width */
+            width: 100%;
             height: 100vh; /* Reference height */
             flex-direction: column;
             justify-content: center;
             align-items: center;
             gap: 30px;
-            padding: 10px 0; /* Reference padding */
-            opacity: 0; /* Start hidden */
-            visibility: hidden; /* Start hidden */
-            z-index: 1001; /* Below hamburger icon */
-             /* Reference transition */
+            padding: 10px 0;
+            opacity: 0;
+            visibility: hidden;
+            z-index: 1001;
             transition: top 0.8s ease-in-out, opacity 0.8s ease-in-out, visibility 0.8s ease-in-out;
         }
 
@@ -145,31 +141,33 @@
             font-weight: 600;
             text-decoration: none;
             opacity: 0; /* Start hidden */
-            /* Reference transition */
             transition: opacity 0.8s ease-in-out, color 0.3s, text-shadow 0.3s, transform 0.3s;
         }
 
+        /* --- This rule creates the glow on hover --- */
         .mobile-nav a:hover {
             color: #00bcd4;
-            text-shadow: 0 0 8px #00bcd4;
+            text-shadow: 0 0 8px #00bcd4; /* The glow */
             transform: scale(1.1);
         }
+        /* --- End of glow rule --- */
 
-        /* Show mobile nav when active - From reference */
+
+        /* Show mobile nav when active */
         .mobile-nav.active {
             top: 0; /* Slide into view */
             opacity: 1;
             visibility: visible;
         }
 
-        /* Fade in links when nav is active - From reference */
+        /* Fade in links when nav is active */
         .mobile-nav.active a {
             opacity: 1;
             transition-delay: 0.3s; /* Delay link fade-in */
         }
 
 
-        /* Introduction Text - Keep specific styles for courses page */
+        /* Introduction Text */
         .intro {
             text-align: center;
             margin: 30px 20px;
@@ -178,7 +176,6 @@
             color: #fff;
             border-radius: 10px;
             line-height: 1.6;
-            /* Animation */
             opacity: 0;
             animation: fadeInUp 0.6s 0.1s ease-out forwards;
         }
@@ -193,7 +190,7 @@
             margin-bottom: 20px;
         }
 
-        /* Courses Content - Keep specific styles for courses page */
+        /* Courses Content */
         .courses-container {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -217,10 +214,9 @@
         .courses-container .course-card:nth-child(4) { animation-delay: 0.5s; }
 
 
-        /* Keep enhanced glow */
         .course-card:hover {
             transform: scale(1.05);
-            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.5), 0 0 18px #00bcd4;
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.5), 0 0 18px #00bcd4; /* Enhanced glow */
         }
 
         .course-card img {
@@ -249,7 +245,6 @@
             background-color: rgba(0, 0, 0, 0.7);
         }
 
-        /* Keep text always visible */
         .course-card .text-overlay {
             position: absolute;
             top: 50%;
@@ -276,7 +271,7 @@
             text-shadow: 1px 1px 3px rgba(0,0,0,0.7);
         }
 
-        /* Button Styling (Keep for potential use) */
+        /* Button Styling */
         .button {
             display: inline-block;
             margin-top: 15px;
@@ -294,42 +289,35 @@
             box-shadow: 0 0 10px #00bcd4;
         }
 
-        /* Footer - Match reference style */
+        /* Footer */
          footer {
              background-color: #2a2a2a;
-             padding: 15px; /* Reference padding */
+             padding: 15px;
              text-align: center;
              font-size: 0.9rem;
              color: #aaa;
              width: 100%;
-             position: relative; /* From reference */
-             /* bottom: 0; /* From reference - remove if causes issues */
-             margin-top: 40px; /* Keep space above footer */
+             position: relative;
+             margin-top: 40px;
          }
 
 
-        /* --- Media Queries - Adjusted based on reference --- */
+        /* --- Media Queries --- */
 
         /* Mobile Adjustments (< 768px) */
-        @media (max-width: 767px) { /* Use 767px to avoid overlap with min-width 768px */
+        @media (max-width: 767px) {
             #nav-links {
-                display: none; /* Hide desktop links */
+                display: none;
             }
-
             .hamburger-menu {
-                display: flex; /* Show hamburger */
+                display: flex;
             }
-
             .mobile-nav {
-                 display: flex; /* Enable mobile nav layout */
+                 display: flex; /* Enable layout */
             }
-
              .nav-container {
-                  /* Justify hamburger to the right */
-                  justify-content: flex-end;
+                  justify-content: flex-end; /* Push hamburger right */
               }
-
-            /* Keep courses page mobile styles */
              .intro h2 { font-size: 1.8rem; }
              .intro p { font-size: 1rem; }
              .courses-container { grid-template-columns: 1fr; padding: 15px; gap: 15px; }
@@ -337,31 +325,24 @@
              .text-overlay p { font-size: 0.9rem; }
         }
 
-         /* Desktop Adjustments (>= 768px) - From reference */
+         /* Desktop Adjustments (>= 768px) */
          @media (min-width: 768px) {
              .hamburger-menu {
                  display: none;
              }
              .mobile-nav {
-                 /* Ensure mobile nav is not flex (or hidden) on desktop */
-                 display: none;
+                 display: none; /* Ensure hidden */
              }
              #nav-links {
-                 /* Ensure desktop links are shown */
-                 display: flex;
+                 display: flex; /* Ensure shown */
              }
               .nav-container {
-                   /* Center links block on desktop */
-                  justify-content: center;
+                  justify-content: center; /* Center links block */
               }
          }
 
-
-        /* Optional: Smaller Mobile Adjustments (< 480px) from reference */
+        /* Optional: Smaller Mobile Adjustments (< 480px) */
          @media (max-width: 480px) {
-             /* #nav-links styles here likely irrelevant as it's hidden */
-
-             /* Adjust intro/course text sizes if needed */
               .intro h2 { font-size: 1.6rem; }
               .intro p { font-size: 0.9rem; }
               .text-overlay h3 { font-size: 1.2rem; }
@@ -373,8 +354,8 @@
 
 <body>
     <nav>
-        <div class="nav-container">
-             <div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">
+         <div class="nav-container">
+            <div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">
                 <div></div>
                 <div></div>
                 <div></div>
@@ -386,7 +367,7 @@
                 <li><a href="achievements.html">Achievements</a></li>
                 <li><a href="projects.html">Personal Projects</a></li>
             </ul>
-            </div>
+        </div>
     </nav>
 
     <div class="mobile-nav" id="mobile-nav">
@@ -405,41 +386,67 @@
 
     <div class="courses-container">
         <div class="course-card">
-            <img src="course1.jpg" alt="Humanities Course Image"> <div class="overlay"></div>
+            <img src="course1.jpg" alt="Humanities Course Image">
+            <div class="overlay"></div>
             <div class="text-overlay">
                  <h3>Humanities (HU)</h3>
                  <p>Study philosophy, literature, and art in human history.</p>
             </div>
         </div>
         <div class="course-card">
-            <img src="course2.jpg" alt="Fine Arts Course Image"> <div class="overlay"></div>
+            <img src="course2.jpg" alt="Fine Arts Course Image">
+            <div class="overlay"></div>
             <div class="text-overlay">
                  <h3>Fine Arts (FA)</h3>
                  <p>Explore artistic expression and its impact on culture.</p>
             </div>
         </div>
          <div class="course-card">
-            <img src="course3.jpg" alt="Another Course Image"> <div class="overlay"></div>
+            <img src="course3.jpg" alt="Another Course Image">
+            <div class="overlay"></div>
             <div class="text-overlay">
                  <h3>Example Course (EX)</h3>
                  <p>This is another course description.</p>
             </div>
         </div>
-        </div>
+    </div>
 
     <footer>
         <p>© 2025 Jesús Lopez Aguilar | All rights reserved</p>
     </footer>
 
     <script>
-        // Function to toggle the mobile menu (Simplified based on reference)
+        // Function to toggle the mobile menu AND body scroll lock
         function toggleMenu() {
             const mobileNav = document.getElementById('mobile-nav');
+            const body = document.body;
+
+            // Toggle the 'active' class on the mobile navigation panel
             mobileNav.classList.toggle('active');
+
+            // Toggle the 'no-scroll' class on the body
+            // Check if the menu is now active to decide whether to add or remove
+            if (mobileNav.classList.contains('active')) {
+                body.classList.add('no-scroll');
+            } else {
+                body.classList.remove('no-scroll');
+            }
         }
 
-        // --- Removed other JS (scroll lock, close on click) to match reference ---
-
+        // Add event listeners to mobile nav links to close menu on click
+        document.querySelectorAll('.mobile-nav a').forEach(link => {
+            link.addEventListener('click', () => {
+                const mobileNav = document.getElementById('mobile-nav');
+                // Check if menu is active before trying to close
+                if (mobileNav.classList.contains('active')) {
+                    // Close the menu
+                    mobileNav.classList.remove('active');
+                    // Remove the scroll lock from the body
+                    document.body.classList.remove('no-scroll');
+                }
+            });
+        });
     </script>
+
 </body>
 </html>
