--- a/courses.html
+++ b/courses.html
@@ -61,16 +61,17 @@
 
          .nav-container {
              display: flex;
-             /* Centered on desktop, doesn't need to worry about hamburger now */
-             justify-content: center;
+             /* Justify depends on screen size (see media queries) */
              align-items: center;
              width: 100%;
              max-width: 1200px;
+             /* Default justify for desktop (links centered) */
+             justify-content: center;
          }
 
         #nav-links {
             list-style: none;
-             /* Display handled by media queries */
+            /* Display handled by media queries */
             gap: 20px;
             margin: 0;
             padding: 0;
@@ -186,7 +187,7 @@
             color: #fff;
             border-radius: 10px;
             line-height: 1.6;
-            opacity: 0;
+            opacity: 0; /* Start hidden for animation */
             animation: fadeInUp 0.6s 0.1s ease-out forwards;
         }
         .intro h2 { font-size: 2rem; margin-bottom: 20px; }
@@ -206,7 +207,7 @@
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
             transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
-            opacity: 0;
+            opacity: 0; /* Start hidden for animation */
             animation: fadeInUp 0.6s ease-out forwards;
         }
         .courses-container .course-card:nth-child(1) { animation-delay: 0.2s; }
@@ -247,8 +248,10 @@
             .mobile-nav {
                  display: flex; /* Enable mobile nav layout */
             }
-             /* .nav-container justify-content no longer needed for hamburger */
-
+             .nav-container {
+                 /* Hamburger is fixed, so nav content can center */
+                 justify-content: center;
+             }
              .intro h2 { font-size: 1.8rem; }
              .intro p { font-size: 1rem; }
              .courses-container { grid-template-columns: 1fr; padding: 15px; gap: 15px; }
@@ -267,7 +270,9 @@
              #nav-links {
                  display: flex; /* Ensure desktop links shown */
              }
-              /* .nav-container justify-content: center; /* Already default for nav */
+              .nav-container {
+                  justify-content: center; /* Ensure links block is centered */
+              }
          }
 
         /* Optional: Smaller Mobile Adjustments (< 480px) */
@@ -297,3 +302,63 @@
     <div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">
         <div></div>
         <div></div>
+        <div></div>
+    </div>
+
+    <div class="mobile-nav" id="mobile-nav">
+        <a href="index.html">Home</a>
+        <a href="about.html">About Me</a>
+        <a href="courses.html">Courses</a>
+        <a href="achievements.html">Achievements</a>
+        <a href="projects.html">Personal Projects</a>
+    </div>
+
+    <div class="intro">
+        <h2>Welcome to My General Education Courses</h2>
+        <p>Alright, let’s get real—this section isn’t just about “what I’ve learned.” No, this is where I break down my journey through Salt Lake Community College, looking at the classes that molded me (sometimes with a side of tears). It’s a wild ride of knowledge and chaos, but it’s all part of how I’m building myself.</p>
+        <p>You'll see how each course gave me something important—whether it was insight, skills, or simply the experience of surviving all-nighters. These aren’t just bullet points; these are *experiences*—and here’s where I tell you all about them.</p>
+    </div>
+
+    <div class="courses-container">
+        <div class="course-card"><img src="course1.jpg" alt="Humanities Course Image"><div class="overlay"></div><div class="text-overlay"><h3>Humanities (HU)</h3><p>Study philosophy, literature, and art in human history.</p></div></div>
+        <div class="course-card"><img src="course2.jpg" alt="Fine Arts Course Image"><div class="overlay"></div><div class="text-overlay"><h3>Fine Arts (FA)</h3><p>Explore artistic expression and its impact on culture.</p></div></div>
+        <div class="course-card"><img src="course3.jpg" alt="Another Course Image"><div class="overlay"></div><div class="text-overlay"><h3>Example Course (EX)</h3><p>This is another course description.</p></div></div>
+    </div>
+
+    <footer>
+        <p>© 2025 Jesús Lopez Aguilar | All rights reserved</p>
+    </footer>
+
+    <script>
+        // Function to toggle the mobile menu AND body scroll lock
+        function toggleMenu() {
+            const mobileNav = document.getElementById('mobile-nav');
+            const body = document.body;
+
+            // Toggle the 'active' class on the mobile navigation panel
+            mobileNav.classList.toggle('active');
+
+            // Toggle the 'no-scroll' class on the body
+            if (mobileNav.classList.contains('active')) {
+                body.classList.add('no-scroll');
+            } else {
+                body.classList.remove('no-scroll');
+            }
+        }
+
+        // Add event listeners to mobile nav links to close menu on click
+        document.querySelectorAll('.mobile-nav a').forEach(link => {
+            link.addEventListener('click', () => {
+                const mobileNav = document.getElementById('mobile-nav');
+                // Check if menu is active before trying to close
+                if (mobileNav.classList.contains('active')) {
+                    // Close the menu
+                    mobileNav.classList.remove('active');
+                    // Remove the scroll lock from the body
+                    document.body.classList.remove('no-scroll');
+                }
+            });
+        });
+    </script>
+    </body>
+</html>
