--- a/courses.html
+++ b/courses.html
@@ -115,8 +115,9 @@
             width: 25px;
             height: 3px;
              margin: 4px 0;
-            /* Changed to white for visibility against dark page background */
-            background-color: #fff;
+            /* === Fix: Changed back to black for visibility against white navbar === */
+            background-color: #000;
+            /* === End Fix === */
             border-radius: 1px; /* Slightly rounded ends */
             transition: transform 0.3s ease, background-color 0.3s ease;
         }
